--- a/server/views/licenceConditions/includes/bespokeConditions.pug
+++ b/server/views/licenceConditions/includes/bespokeConditions.pug
@@ -7,6 +7,8 @@ div.pure-g
         p Add the details of the bespoke condition below
             while n < bespokeConditionsToShow
                 p.bold Bespoke condition #{n+1}
+                p.namedAnchor
+                    a.namedAnchor(name="bespoke-" + n)
                 div.pure-g.smallPaddingBottom
                     div.pure-u-1
                         div.form-group
