--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -36,21 +36,22 @@ block content
                             label(for="hdcConsentNo") No
 
                         div#consentForm.panel.panel-border-narrow.js-hidden
-                            include includes/landlordConsent
+                            div.form-group
+                                p Does the address have an electricity supply?
+                                div.multiple-choice
+                                    input#electricityYes(type="radio" checked=review.electricity === 'Yes' name="electricity" value="Yes")
+                                    label(for="electricityYes") Yes
+                                div.multiple-choice
+                                    input#electricityNo(type="radio" checked=review.electricity === 'No' name="electricity" value="No")
+                                    label(for="electricityNo") No
 
-                    div.form-group.inline
-                        p Could this person be managed safely at this address?
-
-                        div.multiple-choice
-                            input#deemedSafeYes(type="radio" checked=review.deemedSafe === 'Yes' name="deemedSafe" value="Yes")
-                            label(for="deemedSafeYes") Yes
-                        div.multiple-choice(data-target="managedSafelyForm")
-                            input#deemedSafeNo(type="radio" checked=review.deemedSafe === 'No' name="deemedSafe" value="No")
-                            label(for="deemedSafeNo") No
-
-                        div#managedSafelyForm.panel.panel-border-narrow.js-hidden
-                            label(for="safetyDetails") Please give details
-                            textarea(class="form-control" name="safetyDetails" id="safetyDetails" rows="4")
-                                | #{review.safetyDetails}
+                            div.form-group
+                                p Was a home visit conducted in this case?
+                                div.multiple-choice
+                                    input#homeVisitConductedYes(type="radio" checked=review.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
+                                    label(for="homeVisitConductedYes") Yes
+                                div.multiple-choice
+                                    input#homeVisitConductedNo(type="radio" checked=review.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
+                                    label(for="homeVisitConductedNo") No
 
             include ../includes/formButtons
