--- a/server/views/licenceDetails/curfewAddress.pug
+++ b/server/views/licenceDetails/curfewAddress.pug
@@ -1,20 +1,24 @@
-h2.heading-medium.borderBottom.separatorTitle Planned curfew address
--var address = licence.proposedAddress.curfewAddress
+h2.heading-medium.borderBottomLightThick.separatorTitle Proposed curfew address
 
+-var address = licence.proposedAddress.curfewAddress
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         span Address
     div.pure-u-1-2
-        div#dischargeAddress
-            if address.addressLine1
-                span.block.bold #{address.addressLine1}
-            if address.addressLine2
-                span.block.bold #{address.addressLine2}
-            if address.addressTown
-                span.block.bold #{address.addressTown}
-            if address.postCode
-                span.block.bold #{address.postCode}
+        div.pure-g
+            div.pure-u-1-2#dischargeAddress
+                if address.addressLine1
+                    span.block.bold #{address.addressLine1}
+                if address.addressLine2
+                    span.block.bold #{address.addressLine2}
+                if address.addressTown
+                    span.block.bold #{address.addressTown}
+                if address.postCode
+                    span.block.bold #{address.postCode}
+            div.pure-u-1-2.alignRight
+                if user.role === 'RO'
+                    a.link(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -56,36 +60,45 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div.pure-g
             div.pure-u-3-4
-                span Has the offender been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
+                span According to the offender, have they been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
     div.pure-u-1-2
         div#dischargeContactNumber
             if address.cautionedAgainstResident
                 span.bold #{address.cautionedAgainstResident}
 
-div.pure-g.borderBottomLight.midPaddingTopBottom
-    div.pure-u-1-2
-        div.pure-g
-            div.pure-u-3-4
-                span Does the homeowner/landlord give informed consent to HDC at the address?
-    div.pure-u-1-2
-        div#dischargeHomeAddress
-            span.bold NO IDEA
+if licence.curfew && licence.curfew.curfewAddressReviews
+    -var addressReview = licence.curfew.curfewAddressReview
 
-div.pure-g.borderBottomLight.midPaddingTopBottom
-    div.pure-u-1-2
-        span Was a home visit conducted in this case?
-    div.pure-u-1-2
-        span.bold NO IDEA
+    div.pure-g.borderBottomLight.midPaddingTopBottom
+        div.pure-u-1-2
+            div.pure-g
+                div.pure-u-3-4
+                    span Does the homeowner/landlord give informed consent to HDC at the address?
+        div.pure-u-1-2
+            div#dischargeHomeAddress
+                span.bold #{addressReview.consent}
 
-div.pure-g.borderBottomLight.midPaddingTopBottom
-    div.pure-u-1-2
-        span Does the address have an electricity supply?
-    div.pure-u-1-2
-        if address.electricity
-            span.bold #{address.electricity}
+    div.pure-g.borderBottomLight.midPaddingTopBottom
+        div.pure-u-1-2
+            span Was a home visit conducted in this case?
+        div.pure-u-1-2
+            span.bold #{addressReview.homeVisitConducted}
 
-div.pure-g.borderBottomLight.midPaddingTopBottom
-    div.pure-u-1-2
-        span Are you happy for this to be the curfew address?
-    div.pure-u-1-2
-        span.bold NO IDEA
+    div.pure-g.borderBottomLight.midPaddingTopBottom
+        div.pure-u-1-2
+            span Does the address have an electricity supply?
+        div.pure-u-1-2
+            if address.electricity
+                span.bold #{addressReview.electricity}
+
+    div.pure-g.borderBottomLight.midPaddingTopBottom
+        div.pure-u-1-2
+            span Could this offender be managed safely at address?
+        div.pure-u-1-2
+            span.bold #{addressReview.deemedSafe}
+else
+    div.pure-g.midPaddingTopBottom
+        div.pure-u-1-2
+            div.pure-g
+                div.pure-u-3-4
+                    span Address not reviewed
