--- a/server/views/proposedAddress/confirmAddress.pug
+++ b/server/views/proposedAddress/confirmAddress.pug
@@ -7,18 +7,16 @@ block content
         div.back-link-container.smallPaddingTop
             a.link-back(href="javascript: window.history.back();") Back
 
-        h2.heading-large Confirm address details
+        h2.heading-large.paddingBottom Confirm address details
 
         if data.preferred && data.alternative
             div.borderBottomLight.largeMarginBottom
-                h3.heading-medium Preferred address
                 +addressDetail('preferred', data.preferred)
 
             h3.heading-medium Alternative address
             +addressDetail('alternative', data.alternative)
 
         if data.preferred && !data.alternative
-            h3.heading-medium Preferred address
             +addressDetail('preferred', data.preferred)
 
         if !data.preferred && !data.alternative
