--- a/server/views/proposedAddress/includes/addressDetail.pug
+++ b/server/views/proposedAddress/includes/addressDetail.pug
@@ -38,29 +38,21 @@ mixin addressDetail(type, address, review)
 
         if address.occupier
             div.pure-u-1.pure-u-md-7-12
-                div.pure-g
-                    p.pure-u-1-2.noMargin Name of main occupier
-                    p.pure-u-1-4.noMargin Age
-                    p.pure-u-1-4.noMargin Relation to prisoner
-
+                p Main occupier
                 div.pure-g.smallMarginTop.borderBottomLight.smallPaddingBottom
                     p.bold.pure-u-1-2.noMargin(id=type+"-occupierName") #{address.occupier.name}
-                    p.bold.pure-u-1-4.noMargin(id=type+"-occupierAge") #{address.occupier.age}
-                    p.bold.pure-u-1-4.noMargin(id=type+"-occupierRelation") #{address.occupier.relationship}
+                    p.bold.pure-u-1-3.noMargin(id=type+"-occupierRelation") #{address.occupier.relationship}
+                    p.bold.pure-u-4-24.noMargin(id=type+"-occupierAge") #{address.occupier.age}
 
-                div.pure-g.largePaddingBottom.smallPaddingTop
-                    p.pure-u-1.bold Other residents
-                    p.pure-u-1-2.noMargin Name
-                    p.pure-u-1-4.noMargin Age
-                    p.pure-u-1-4.noMargin Relation to prisoner
+                div.largePaddingBottom.smallPaddingTop
+                    p Other residents
 
                     if address.residents && address.residents.length > 0
                         for resident, index in address.residents
-                            div.pure-u-1
-                                div.pure-g.smallMarginTop
-                                    p.bold.noMargin.pure-u-1-2(id=type+"-resident-name-"+index) #{resident.name}
-                                    p.bold.noMargin.pure-u-1-4(id=type+"-resident-age-"+index) #{resident.age}
-                                    p.bold.noMargin.pure-u-1-4(id=type+"-resident-relation-"+index) #{resident.relation}
+                            div.pure-g.smallMarginTop
+                                p.bold.noMargin.pure-u-1-2(id=type+"-resident-name-"+index) #{resident.name}
+                                p.bold.noMargin.pure-u-1-3(id=type+"-resident-relation-"+index) #{resident.relation}
+                                p.bold.noMargin.pure-u-4-24(id=type+"-resident-age-"+index) #{resident.age}
 
                     else
                         div.pure-u-1
