--- a/server/views/licenceDetails/curfewAddress.pug
+++ b/server/views/licenceDetails/curfewAddress.pug
@@ -1,6 +1,6 @@
 h2.heading-medium.borderBottomLightThick.separatorTitle Proposed curfew address
 
--var address = licence.proposedAddress.curfewAddress
+-var address = licence.proposedAddress.curfewAddress.preferred
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -9,16 +9,16 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-g
             div.pure-u-1-2#dischargeAddress
                 if address.addressLine1
-                    span.block.bold #{address.addressLine1}
+                    span#address1.block.bold #{address.addressLine1}
                 if address.addressLine2
-                    span.block.bold #{address.addressLine2}
+                    span#address2.block.bold #{address.addressLine2}
                 if address.addressTown
-                    span.block.bold #{address.addressTown}
+                    span#town.block.bold #{address.addressTown}
                 if address.postCode
-                    span.block.bold #{address.postCode}
+                    span#postCode.block.bold #{address.postCode}
             div.pure-u-1-2.alignRight
                 if user.role === 'RO'
-                    a.link(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
+                    a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -26,7 +26,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div#dischargeContactName
             if address.telephone
-                span.bold #{address.telephone}
+                span#telephone.bold #{address.telephone}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -35,11 +35,11 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-g
             if address.occupier
                 div.pure-u-md-2-5
-                    span.bold #{address.occupier.name}
+                    span#occupierName.bold #{address.occupier.name}
                 div.pure-u-md-1-5
-                    span.bold #{address.occupier.age}
+                    span#occupierAge.bold #{address.occupier.age}
                 div.pure-u-md-2-5
-                    span.bold #{address.occupier.relationship}
+                    span#occupierRelation.bold #{address.occupier.relationship}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -47,14 +47,15 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div.pure-g
             if address.residents
-                for resident in address.residents
-                    if (resident.name !== "" && resident.age !== "" && resident.relation !== "")
-                        div.pure-u-md-2-5
-                            span.bold #{resident.name}
-                        div.pure-u-md-1-5
-                            span.bold #{resident.age}
-                        div.pure-u-md-2-5
-                            span.bold #{resident.relation}
+                for resident, index in address.residents
+                    if(resident.name != '' || resident.age != '' || resident.relation != '')
+                        div.pure-u-1.resident
+                            div.pure-u-md-2-5
+                                span.bold(id="residentName-" + index) #{resident.name}
+                            div.pure-u-md-1-5
+                                span.bold(id="residentAge-" + index) #{resident.age}
+                            div.pure-u-md-2-5
+                                span.bold(id="residentRelation-" + index) #{resident.relation}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -64,10 +65,11 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div#dischargeContactNumber
             if address.cautionedAgainstResident
-                span.bold #{address.cautionedAgainstResident}
+                span#cautioned.bold #{address.cautionedAgainstResident}
 
-if licence.curfew && licence.curfew.curfewAddressReviews
+if licence.curfew && licence.curfew.curfewAddressReview
     -var addressReview = licence.curfew.curfewAddressReview
+    -var addressSafety = licence.curfew.addressSafety
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
@@ -76,26 +78,26 @@ if licence.curfew && licence.curfew.curfewAddressReviews
                     span Does the homeowner/landlord give informed consent to HDC at the address?
         div.pure-u-1-2
             div#dischargeHomeAddress
-                span.bold #{addressReview.consent}
+                span#consent.bold #{addressReview.consent}
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
             span Was a home visit conducted in this case?
         div.pure-u-1-2
-            span.bold #{addressReview.homeVisitConducted}
+            span#homeVisit.bold #{addressReview.homeVisitConducted}
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
             span Does the address have an electricity supply?
         div.pure-u-1-2
             if address.electricity
-                span.bold #{addressReview.electricity}
+                span#electricity.bold #{addressReview.electricity}
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
             span Could this offender be managed safely at address?
         div.pure-u-1-2
-            span.bold #{addressReview.deemedSafe}
+            span#deemedSafe.bold #{addressSafety.deemedSafe}
 else
     div.pure-g.midPaddingTopBottom
         div.pure-u-1-2
