--- a/server/views/licenceDetails/curfewHours.pug
+++ b/server/views/licenceDetails/curfewHours.pug
@@ -9,19 +9,19 @@ div.pure-g.midPaddingTopBottom
             span.block Tuesday
             span.block Wednesday
         div.pure-u-1-6
-            span.block #{hours.mondayFrom} - #{hours.mondayUntil}
-            span.block #{hours.tuesdayFrom} - #{hours.tuesdayUntil}
-            span.block #{hours.wednesdayFrom} - #{hours.wednesdayUntil}
+            span#monday.block #{hours.mondayFrom} - #{hours.mondayUntil}
+            span#tuesday.block #{hours.tuesdayFrom} - #{hours.tuesdayUntil}
+            span#wednesday.block #{hours.wednesdayFrom} - #{hours.wednesdayUntil}
         div.pure-u-1-6
             span.block Thursday
             span.block Friday
             span.block Saturday
         div.pure-u-1-6
-            span.block #{hours.thursdayFrom} - #{hours.thursdayUntil}
-            span.block #{hours.fridayFrom} - #{hours.fridayUntil}
-            span.block #{hours.saturdayFrom} - #{hours.saturdayUntil}
+            span#thursday.block #{hours.thursdayFrom} - #{hours.thursdayUntil}
+            span#friday.block #{hours.fridayFrom} - #{hours.fridayUntil}
+            span#saturday.block #{hours.saturdayFrom} - #{hours.saturdayUntil}
         div.pure-u-1-6
             span.block Sunday
         div.pure-u-1-6
-            span.block #{hours.sundayFrom} - #{hours.sundayUntil}
+            span#sunday.block #{hours.sundayFrom} - #{hours.sundayUntil}
     div.pure-u-1-6
