--- a/server/views/licenceDetails/riskManagement.pug
+++ b/server/views/licenceDetails/riskManagement.pug
@@ -11,10 +11,10 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-g
             div.pure-u-2-3
                 if risk.planningActions
-                    span.bold #{risk.planningActions}
+                    span#planningActions.bold #{risk.planningActions}
             div.pure-u-1-3.alignRight
                 if user.role === 'RO'
-                    a.link(href="/hdc/risk/riskManagement/" + nomisId) Change these details
+                    a#riskEditLink(href="/hdc/risk/riskManagement/" + nomisId) Change these details
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -23,7 +23,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                 span Are you still waiting for information to inform risk management planning?
     div.pure-u-1-2
         if risk.awaitingInformation
-            span.bold #{risk.awaitingInformation}
+            span#awaitingInformation.bold #{risk.awaitingInformation}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -32,6 +32,6 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                 span Is this a Victim Contact Service qualifying case where the victim has opted in?
     div.pure-u-1-2
         if risk.victimLiaison
-            span.bold #{risk.victimLiaison}
+            span#victimLiaison.bold #{risk.victimLiaison}
 
 
