--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -7,17 +7,46 @@ block content
         a.link-back(href="javascript: window.history.back();") Back
 
     h2.heading-large Curfew hours
-
-    div.pure-g.borderBottom.paddingBottom.largeMarginBottom
-        .pure-u-1.pure-u-md-2-3
-            p These are the standard HDC curfew hours which you can alter if you wish
-
+    h2.heading-medium.smallMarginTop First night curfew hours
 
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
 
-        div.pure-g.borderBottom.largePaddingBottom.largeMarginBottom
+        div.pure-g.borderBottom.midPaddingBottom
+            div.pure-u-1.pure-u-md-14-24
+                div.pure-g.smallPaddingBottom
+                    div.pure-u-1-3.pure-u-md-1-3
+                        span.bold From
+                    div.pure-u-1-3.pure-u-md-2-3
+                        span.bold Until
+                div.pure-g
+                    div.pure-u-1-3.pure-u-md-1-3
+                        div.tinyPaddingBottom
+                            label(for="firstNightFrom", class="form-label")
+                                div.pure-g.content-pull
+                                    div.pure-u-1-2
+                                        div.l-box
+                                            input(name="firstNightFrom", id="firstNightFrom" class="form-control", value=data['firstNightFrom'] || "19:00", type="time")
+                                    div.pure-u-1-2
+                                        div.l-box.l-box--no-left
+                                            span.hours-text hours
+
+                    div.pure-u-1-3.pure-u-md-2-3
+                        div.tinyPaddingBottom
+                            label(for="firstNightUntil", class="form-label")
+                                div.pure-g.content-pull
+                                    div.pure-u-7-24
+                                        div.l-box
+                                            input(name="firstNightUntil", id="firstNightUntil" class="form-control", value=data['firstNightUntil'] || "07:00", type="time")
+                                    div.pure-u-17-24
+                                        div.l-box.l-box--no-left
+                                            span.hours-text hours the following morning
+            div.pure-u-1.pure-u-md-10-24
+
+        h2.heading-medium Standard HDC curfew hours
+
+        div.pure-g.largePaddingBottom.largeMarginBottom
             div.pure-u-1.pure-u-md-4-5
                 div.pure-g.smallPaddingBottom
                     div.pure-u-1-3.pure-u-md-4-24
