Add first night to licence summary screen

--- a/server/views/licenceDetails/curfewHours.pug
+++ b/server/views/licenceDetails/curfewHours.pug
@@ -3,6 +3,12 @@ h2.heading-medium.borderBottomLightThick.separatorTitle Proposed HDC curfew hour
 -var hours = licence.curfew.curfewHours
 
 div.pure-g.midPaddingTopBottom
+    div.pure-u-5-6.smallPaddingBottom
+        div.pure-u-1-6
+            span.block First night
+        div.pure-u-5-6
+            span#firstNight.block #{hours.firstNightFrom} - #{hours.firstNightUntil}
+    div.pure-u-1-6
     div.pure-u-5-6
         div.pure-u-1-6
             span.block Monday
