--- a/server/views/licenceDetails/curfewHours.pug
+++ b/server/views/licenceDetails/curfewHours.pug
@@ -8,7 +8,9 @@ div.pure-g.midPaddingTopBottom
             span.block First night
         div.pure-u-5-6
             span#firstNight.block #{hours.firstNightFrom} - #{hours.firstNightUntil}
-    div.pure-u-1-6
+    div.pure-u-1-6.alignRight
+        if user.role === 'RO'
+            a#curfewHoursEditLink(href="/hdc/curfew/curfewHours/" + nomisId) Change these details
     div.pure-u-5-6
         div.pure-u-1-6
             span.block Monday
