--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -1,5 +1,6 @@
 extends ../layout
 include ./includes/proceedButton
+include ./includes/utils
 
 block content
 
@@ -25,6 +26,7 @@ block content
                 include additionalConditionsTask
                 include riskManagementTask
                 include reportingInstructionsTask
+                include finalChecksTask
                 include postponementTask
                 include caSubmitTask
 
