--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -44,7 +44,7 @@ block content
                                             span.hours-text hours the following morning
             div.pure-u-1.pure-u-md-10-24
 
-        h2.heading-medium Standard HDC curfew hours
+        h2.heading-medium Regular HDC curfew hours
 
         div.pure-g.largePaddingBottom.largeMarginBottom
             div.pure-u-1.pure-u-md-4-5
