--- a/server/views/taskList/postponementTask.pug
+++ b/server/views/taskList/postponementTask.pug
@@ -4,13 +4,14 @@ div.largeMarginBottom.borderTop
     div.borderBottomLight.largeMarginBottom
 
     div.pure-g
-        div.pure-u-3-4
+        div.pure-u-1-2
             if licenceStatus.decisions.postponed
                 | Licence postponed
             else
-                | Use this to indicate that the process ispostponed while any risk management planning actions remain outstanding
+                | Use this to indicate that the process is postponed while any risk management planning actions remain outstanding
         div.pure-u-1-4
-            a.taskListAction.center.button(href="/hdc/postpone/" + prisonerInfo.offenderNo)
+        div.pure-u-1-4
+            a.taskListAction.center.button.button-secondary(href="/hdc/finalChecks/postpone/" + prisonerInfo.offenderNo)
                 if licenceStatus.decisions.postponed
                     | Resume
                 else
