--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -5,7 +5,7 @@ table#hdcEligiblePrisoners.largeMarginBottom
             th NOMS ID
             th Location
             th HDCED
-            th CRD
+            th CRD / ARD
             th Current status
             th
     tbody
